css/index.css
body {
    background-color:#000000;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
    height: 100%;
    width: 100%;
    animation: fadein 0.5s linear;
}

@keyframes fadein {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

.link-unstyled,
.link-unstyled:link,
.link-unstyled:hover {
    color: inherit;
    text-decoration: inherit;
}

